# starkShield_public

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  Makefile  README.md  SECURITY.md  auto-deploy.sh  backup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  redis.conf  update.sh
circuits/: intent_circuit.circom  package.json  settlement_circuit.circom
circuits/scripts/: generate_garaga_verifier_on_server.sh  generate_intent_vk_on_server.sh
circuits/test/: test_intent_circuit.js
contracts/: DarkPool.cairo  IntentVerifier.cairo  Scarb.toml
contracts/garaga_intent_verifier/: Scarb.toml
contracts/garaga_intent_verifier/src/: groth16_verifier_constants.cairo
contracts/garaga_intent_verifier/tests/: test_contract.cairo
contracts/src/: IntentVerifier.cairo  lib.cairo
deploy/scripts/: clear-intent-state.sh  deploy-via-bastion.sh  prepare_frontend_circuit_assets.sh  rollback.sh  verify-prod.sh
doc/: Architecture_Alignment_Report.md  Hackathon_Delivery_Playbook.md  StarkShield.docx  Starknet.docx
docs/: README.md  api.md  architecture.md  contracts.md  faq.md  getting-started.md
frontend/: Dockerfile  index.html  package.json  server.cjs  tailwind.config.js  vite.config.ts
frontend/lib/: api-client.ts  pragma-twap.ts
frontend/src/: App.tsx  garaga.d.ts  index.css  main.tsx  vite-env.d.ts
nginx/: nginx.conf
solver/: Cargo.toml  Dockerfile
solver/.cargo/: config.toml
solver/src/: api.rs  auth.rs  config.rs  main.rs  matcher.rs  models.rs  starknet.rs  storage.rs  utils.rs
tests/: integration.test.js  package.json
(+16 files in other folders)
