[package]
name = "starkshield-solver"
version = "0.1.9"
edition = "2021"
authors = ["StarkShield Team <team@starkshield.io>"]
description = "Off-chain solver service for StarkShield dark pool"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
ethers = { version = "2.0", features = ["rustls"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"
config = "0.14"
once_cell = "1.19"
async-trait = "0.1"
futures = "0.3"
ordered-float = "4.2"
rand = "0.8"
sha3 = "0.10"
hex = "0.4"
base64 = "0.21"
lazy_static = "1.4"
dotenvy = "0.15"
jsonwebtoken = "9.3"
num-bigint = "0.4"
num-traits = "0.2"

[dependencies.starknet]
git = "https://github.com/xJonathanLEI/starknet-rs"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "solver"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
